# objectbox-ts-demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  objectbox-ext.h  objectbox-model.h  objectbox-model.json  setup.sh  ts-data-model-cpp.obx.h  ts-data-model.fbs  ts-data-model.obx.h
include/: objectbox-cpp.h  objectbox.h
include/flatbuffers/: code_generators.h  flexbuffers.h  idl.h  reflection.h  reflection_generated.h
src/: main.cpp  ts-data-model.obx.cpp  ts-data-model.obx.hpp
src/util/: StopWatch.cpp  StopWatch.h
